syntax = "proto3";

package v2.user;

option go_package = "go-grpc/protos/v2/user";

import "google/api/annotations.proto";

service User {
    // user id를 전달할 경우, user id에 맞는 유저의 정보를 리턴하는 rpc
    rpc GetUser(GetUserRequest) returns (GetUserResponse){
        option (google.api.http) = {
            get: "/v2/users/{user_id}" 
        };
        
    }

    // 모든 유저들의 정보를 리턴하는 rpc
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse){
        option (google.api.http) = {
            get: "/v2/users" 
        };
    }
}

message UserMessage {
    string user_id = 1;
    string name = 2;
    string phone_number = 3;
    int32 age = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    UserMessage user_message = 1;
}

message ListUsersRequest{}

message ListUsersResponse{
    repeated UserMessage user_messages = 1;
}